Create new match using dashboard

--- a/match-management/src/main/resources/templates/dashboard.html
+++ b/match-management/src/main/resources/templates/dashboard.html
@@ -81,7 +81,7 @@
 
     <div class="col-12 mb-3">
       <div class="upgrade-to-pro">
-        <a href="http://localhost:8081/dashboard/match/new"
+        <a th:href="@{/dashboard/match/create}"
            target="_blank"
            class="btn btn-danger">Add new match</a>
       </div>
