--- a/bet-frontend/src/app/shared/header/header/header.component.html
+++ b/bet-frontend/src/app/shared/header/header/header.component.html
@@ -4,9 +4,10 @@
       <img src="assets/images/logo.png" alt="">
     </a>
     <ul class="navbar-links">
-      <li><a href="/">Matches</a></li>
-      <li><a href="/movies">Bets</a></li>
-      <li><a href="/genres">Ranking</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/matches">Matches</a></li>
+      <li><a href="/bets">Bets</a></li>
+      <li><a href="/ranking">Ranking</a></li>
     </ul>
   </nav>
 </header>
