Add match banner and match item components

--- a/bet-frontend/src/app/pages/home/home.component.html
+++ b/bet-frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,2 @@
 <app-slider [items]="notFinishedMatches"></app-slider>
+<app-match-banner [matches]="notFinishedMatches" title="Upcoming matches"></app-match-banner>
