--- a/bet-frontend/src/app/pages/home/home.component.html
+++ b/bet-frontend/src/app/pages/home/home.component.html
@@ -1,2 +1,3 @@
-<app-slider [items]="notFinishedMatches"></app-slider>
-<app-match-banner [matches]="notFinishedMatches" title="Upcoming matches"></app-match-banner>
+<app-slider [items]="upcomingMatches"></app-slider>
+<app-match-banner [matches]="upcomingMatches" title="Upcoming matches"></app-match-banner>
+<app-match-banner [matches]="finishedMatches" title="Finished matches"></app-match-banner>
