--- a/bet-frontend/src/app/shared/footer/footer/footer.component.html
+++ b/bet-frontend/src/app/shared/footer/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-  <span>{{date | date: 'yyyy'}} Bet League Microservices. All rights reserved.</span>
+  <span>{{date | date: 'yyyy'}} Bet League Microservices. All rights reserved. ©</span>
 </footer>
