--- a/bet-frontend/src/app/shared/header/header/header.component.html
+++ b/bet-frontend/src/app/shared/header/header/header.component.html
@@ -8,6 +8,10 @@
       <li><a href="/matches">Matches</a></li>
       <li><a href="/bets">Bets</a></li>
       <li><a href="/ranking">Ranking</a></li>
+      <li>
+        <button *ngIf="!isLoggedIn" class="btn btn-primary" (click)="login()" type="submit">Login</button>
+        <button *ngIf="isLoggedIn" class="btn btn-primary" (click)="logout()" type="submit">Logout</button>
+      </li>
     </ul>
   </nav>
 </header>
