--- a/bet-frontend/src/app/shared/header/header/header.component.html
+++ b/bet-frontend/src/app/shared/header/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar">
     <a href="" class="navbar-logo">
-      <img src="assets/images/logo.png" alt="">
+      <img src="assets/images/favicon.ico" alt="">
     </a>
     <ul class="navbar-links">
       <li><a href="/">Home</a></li>
