--- a/bet-frontend/src/app/pages/home/home.component.html
+++ b/bet-frontend/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
-<app-slider [items]="upcomingMatches"></app-slider>
+<app-slider [items]="allMatches"></app-slider>
 <app-match-banner [matches]="upcomingMatches" title="Upcoming matches"></app-match-banner>
-<app-match-banner [matches]="finishedMatches" title="Finished matches"></app-match-banner>
+<app-match-banner [matches]="allMatches" title="Finished matches"></app-match-banner>
