--- a/bet-frontend/src/app/components/bet/bet.component.html
+++ b/bet-frontend/src/app/components/bet/bet.component.html
@@ -4,10 +4,14 @@
     <div class="bet-item-matchTime">{{bet.match.startTime | date: 'dd.MM.yyyy hh:mm'}}</div>
     <ng-container *ngIf="bet.match.result">
       <div class="bet-item-result">
-        <span>Predictions</span>
+        <span>Result</span>
         <span>{{bet.match.result.homeTeamGoals}} : {{bet.match.result.awayTeamGoals}}</span>
       </div>
     </ng-container>
+    <div class="bet-item-result">
+      <span>Predictions</span>
+      <span>{{bet.matchPredictedResult.homeTeamGoals}} : {{bet.matchPredictedResult.awayTeamGoals}}</span>
+    </div>
     <div class="bet-item-image">
       <img [src]="'https://fullmatchesreplays.com/wp-content/uploads/2021/02/Arsenal-vs-Leeds-United.jpg'" > <!-- TODO -->
     </div>
