--- a/bet-frontend/src/app/pages/bets-page/bets-page.component.html
+++ b/bet-frontend/src/app/pages/bets-page/bets-page.component.html
@@ -1,6 +1,13 @@
 <div class="container">
+  <h2>My Own Bets</h2>
+  <p-carousel [numVisible]="5" *ngIf="myOwnBets.length != 0" [value]="myOwnBets">
+    <ng-template let-myBet pTemplate="bet">
+      <app-bet [bet]="myBet"></app-bet>
+    </ng-template>
+  </p-carousel>
+  <h2>All Bets</h2>
   <div class="grid">
-    <div class="col-6 md:col-3 lg:col-2" *ngFor="let bet of bets">
+    <div class="col-6 md:col-3 lg:col-2" *ngFor="let bet of allBets">
       <app-bet [bet]="bet"></app-bet>
     </div>
   </div>
