Time format update

--- a/bet-frontend/src/app/components/bet/bet.component.html
+++ b/bet-frontend/src/app/components/bet/bet.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="bet">
   <a class="bet-item" [routerLink]="'/bet/' + bet.id">
     <div class="bet-item-user">{{bet.user.firstName}} {{bet.user.lastName}}</div>
-    <div class="bet-item-matchTime">{{bet.match.startTime | date: 'dd.MM.yyyy hh:mm'}}</div>
+    <div class="bet-item-matchTime">{{bet.match.startTime | date: 'dd.MM.yyyy HH:mm'}}</div>
     <ng-container *ngIf="bet.match.result">
       <div class="bet-item-result">
         <span>Result</span>
