--- a/bet-frontend/src/app/components/slider/slider.component.html
+++ b/bet-frontend/src/app/components/slider/slider.component.html
@@ -13,7 +13,7 @@
           <div class="info">
           <span class="match-info">
             <span class="separated">{{item.round.roundName}}</span>
-            <span class="separated">{{item.startTime | date: 'dd.MM.yyyy hh:mm'}}</span>
+            <span class="separated">{{item.startTime | date: 'dd.MM.yyyy HH:mm'}}</span>
           </span>
           </div>
         </div>
