--- a/bet-frontend/src/app/pages/match-page/match-page.component.html
+++ b/bet-frontend/src/app/pages/match-page/match-page.component.html
@@ -17,7 +17,7 @@
           </ng-container>
           <div class="stat">
             <div class="label">Start time:</div>
-            <div class="value">{{match.startTime | date: 'hh:mm dd.MM.yyyy'}}</div>
+            <div class="value">{{match.startTime | date: 'HH:mm dd.MM.yyyy'}}</div>
           </div>
           <div class="stat">
             <div class="label">Round:</div>
@@ -25,7 +25,7 @@
           </div>
           <div class="stat">
             <div class="label">Round start time:</div>
-            <div class="value">{{match.round.startTime | date: 'hh:mm dd.MM.yyyy'}}</div>
+            <div class="value">{{match.round.startTime | date: 'HH:mm dd.MM.yyyy'}}</div>
           </div>
         </div>
       </div>
