Add validation to check if match is started

--- a/bet-frontend/src/app/pages/bet-page/bet-page.component.html
+++ b/bet-frontend/src/app/pages/bet-page/bet-page.component.html
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <button class="button" type="submit" [disabled]="!betPredictionForm.valid">Bet</button>
+  <button class="button" type="submit" [disabled]="!betPredictionForm.valid || isMatchStarted">Bet</button>
 
 </form>
