Update buttons and add verification if match is started

--- a/bet-frontend/src/app/pages/bet-page/bet-page.component.html
+++ b/bet-frontend/src/app/pages/bet-page/bet-page.component.html
@@ -78,7 +78,7 @@
           </div>
         </ng-container>
         <div class="stat">
-          <button class="button" type="submit" [disabled]="!betPredictionForm.valid || isMatchStarted()">Bet</button>
+          <p-button type="submit" [disabled]="!betPredictionForm.valid || isMatchStarted()">Bet</p-button>
         </div>
     </div>
     </form>
