--- a/bet-frontend/src/app/pages/match-page/match-page.component.html
+++ b/bet-frontend/src/app/pages/match-page/match-page.component.html
@@ -27,9 +27,11 @@
             <div class="label">Round start time:</div>
             <div class="value">{{match.round.startTime | date: 'HH:mm dd.MM.yyyy'}}</div>
           </div>
-          <div class="stat">
-            <button class="button" [routerLink]="'/bets/new'" [queryParams]="{matchId: match.id}">Create bet</button>
-          </div>
+          <ng-container *ngIf="canCreateBet()">
+            <div class="stat">
+              <p-button [routerLink]="'/bets/new'" [queryParams]="{matchId: match.id}">Create bet</p-button>
+            </div>
+          </ng-container>
         </div>
       </div>
     </p-tabPanel>
