--- a/bet-frontend/src/app/components/bet/bet.component.scss
+++ b/bet-frontend/src/app/components/bet/bet.component.scss
@@ -3,6 +3,7 @@
 .bet-item {
   position: relative;
   display: block;
+  max-width: 300px;
   min-height: 325px;
   border-radius: 5px;
   background-color: $bgColorLight;
