--- a/match-management/src/main/resources/templates/match.html
+++ b/match-management/src/main/resources/templates/match.html
@@ -98,6 +98,9 @@
             <div class="row justify-content-end">
               <div class="mt-4">
                 <button type="submit" class="btn btn-primary">Save</button>
+                <div class="btn btn-danger">
+                  <a th:href="@{/dashboard/match/{id}/remove(id=${match.id})}">Delete</a>
+                </div>
                 <div class="btn btn-outline-secondary">
                   <a th:href="@{/dashboard/match}">Discard</a>
                 </div>
