Dynamic resolving match preview images

--- a/bet-frontend/src/app/components/bet/bet.component.html
+++ b/bet-frontend/src/app/components/bet/bet.component.html
@@ -11,7 +11,7 @@
       <span>{{bet.matchPredictedResult.homeTeamGoals}} : {{bet.matchPredictedResult.awayTeamGoals}}</span>
     </div>
     <div class="bet-item-image">
-      <img [src]="'https://fullmatchesreplays.com/wp-content/uploads/2021/02/Arsenal-vs-Leeds-United.jpg'" > <!-- TODO -->
+      <img [src]="'https://github.com/PiotrMichalowski96/bet-microservices/blob/master/doc/graphics/' + bet.match.homeTeam + '-Cadiz.png?raw=true'" > <!-- TODO -->
     </div>
     <div class="bet-item-match">{{bet.match.homeTeam}} vs {{bet.match.awayTeam}}</div>
   </a>
