--- a/bet-frontend/src/app/components/match/match.component.html
+++ b/bet-frontend/src/app/components/match/match.component.html
@@ -7,7 +7,7 @@
       </div>
     </ng-container>
     <div class="match-item-image">
-      <img [src]="'https://fullmatchesreplays.com/wp-content/uploads/2021/02/Arsenal-vs-Leeds-United.jpg'" > <!-- TODO -->
+      <img [src]="'https://github.com/PiotrMichalowski96/bet-microservices/blob/master/doc/graphics/' + match.homeTeam + '-' + match.awayTeam + '.png?raw=true'">
     </div>
     <div class="match-item-title">{{match.homeTeam}} vs {{match.awayTeam}}</div>
   </a>
