--- a/bet-frontend/src/app/pages/match-page/match-page.component.html
+++ b/bet-frontend/src/app/pages/match-page/match-page.component.html
@@ -4,7 +4,7 @@
     <p-tabPanel header="Overview">
       <div class="grid">
         <div class="col-12 md:col-3 lg:col-3">
-          <img class="poster" [src]="'https://fullmatchesreplays.com/wp-content/uploads/2021/02/Arsenal-vs-Leeds-United.jpg'">
+          <img class="poster" [src]="'https://github.com/PiotrMichalowski96/bet-microservices/blob/master/doc/graphics/' + match.homeTeam + '-' + match.awayTeam + '.png?raw=true'">
         </div>
         <div class="col-12 md:col-9 lg:col-9">
           <h2>Overview</h2>
