--- a/bet-frontend/src/styles.scss
+++ b/bet-frontend/src/styles.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&display=swap');
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import "~primeflex/primeflex.css";
+@import "~primeicons/primeicons.css";
 @import "~primeng/resources/themes/arya-orange/theme.css";
 @import "~primeng/resources/primeng.min.css";
 
