--- a/bet-frontend/src/app/pages/matches-page/matches-page.component.html
+++ b/bet-frontend/src/app/pages/matches-page/matches-page.component.html
@@ -5,6 +5,7 @@
     </div>
   </div>
   <div>
-    <p-paginator [rows]="20" [totalRecords]="10000" (onPageChange)="paginate($event)"></p-paginator>
+    <p-paginator [rows]="10" [totalRecords]="100" (onPageChange)="paginate($event)"
+                 [showJumpToPageDropdown]="true" [showPageLinks]="false"></p-paginator>
   </div>
 </div>
