--- a/bet-frontend/src/app/pages/bets-page/bets-page.component.html
+++ b/bet-frontend/src/app/pages/bets-page/bets-page.component.html
@@ -1,6 +1,7 @@
 <div class="container">
   <h2>My Own Bets</h2>
-  <p-carousel [numVisible]="5" *ngIf="myOwnBets.length != 0" [value]="myOwnBets">
+  <p-carousel [value]="myOwnBets" [numVisible]="5" [numScroll]="3" *ngIf="myOwnBets.length != 0"
+              [responsiveOptions]="responsiveOptions">
     <ng-template let-myBet pTemplate="bet">
       <app-bet [bet]="myBet"></app-bet>
     </ng-template>
@@ -12,6 +13,7 @@
     </div>
   </div>
   <div>
-    <p-paginator [rows]="20" [totalRecords]="10000" (onPageChange)="paginate($event)"></p-paginator>
+    <p-paginator [rows]="10" [totalRecords]="1500" (onPageChange)="paginate($event)"
+                 [showJumpToPageDropdown]="true" [showPageLinks]="false"></p-paginator>
   </div>
 </div>
