Update icon and add image source attribution

--- a/bet-frontend/src/app/shared/footer/footer/footer.component.html
+++ b/bet-frontend/src/app/shared/footer/footer/footer.component.html
@@ -1,3 +1,5 @@
 <footer>
   <span>{{date | date: 'yyyy'}} Bet League Microservices. All rights reserved. ©</span>
+  <br>
+  <span class="image-source">Images from: <a href="https://www.vecteezy.com/free-vector/sports">Sports Vectors by Vecteezy</a></span>
 </footer>
