--- a/bet-frontend/src/app/shared/footer/footer/footer.component.scss
+++ b/bet-frontend/src/app/shared/footer/footer/footer.component.scss
@@ -1,11 +1,15 @@
 @import "../../../../styles/colors";
 
 footer {
-  display: flex;
+  display: block;
   align-items: center;
   justify-content: center;
   padding: 0.5rem 1rem;
   height: 65px;
   background-color: $bgColorLight;
   margin: 0;
+
+  .image-source {
+    font-size: 8px;
+  }
 }
