[FEATURE] ongoing matches presented on home page

--- a/bet-frontend/src/app/pages/home/home.component.html
+++ b/bet-frontend/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <app-slider [items]="allMatches"></app-slider>
+<app-match-banner [matches]="ongoingMatches" title="Ongoing matches"></app-match-banner>
 <app-match-banner [matches]="upcomingMatches" title="Upcoming matches"></app-match-banner>
 <app-match-banner [matches]="allMatches" title="All matches"></app-match-banner>
