[FEATURE] fix number of pages on the bottom in matches page

--- a/bet-frontend/src/app/pages/matches-page/matches-page.component.html
+++ b/bet-frontend/src/app/pages/matches-page/matches-page.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div>
-    <p-paginator [rows]="10" [totalRecords]="100" (onPageChange)="paginate($event)"
+    <p-paginator [rows]="MatchesService.itemsOnPage" [totalRecords]="totalMatches" (onPageChange)="paginate($event)"
                  [showJumpToPageDropdown]="true" [showPageLinks]="false"></p-paginator>
   </div>
 </div>
