[FEATURE] fix number of pages on the bottom in bets page

--- a/bet-frontend/src/app/pages/bets-page/bets-page.component.html
+++ b/bet-frontend/src/app/pages/bets-page/bets-page.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
   <div>
-    <p-paginator [rows]="10" [totalRecords]="1500" (onPageChange)="paginate($event)"
+    <p-paginator [rows]="BetsService.itemsOnPage" [totalRecords]="totalBets" (onPageChange)="paginate($event)"
                  [showJumpToPageDropdown]="true" [showPageLinks]="false"></p-paginator>
   </div>
 </div>
