[FEATURE] max number of bets in carousel

--- a/bet-frontend/src/app/pages/match-page/match-page.component.html
+++ b/bet-frontend/src/app/pages/match-page/match-page.component.html
@@ -39,8 +39,7 @@
       <ng-container *ngIf="bets.length == 0">
         <span class="no-bets">No bets</span>
       </ng-container>
-      <p-carousel [value]="bets" [numVisible]="5" [numScroll]="3" *ngIf="bets.length != 0"
-                  [responsiveOptions]="responsiveOptions">
+      <p-carousel [value]="bets" [numVisible]="50" *ngIf="bets.length != 0" [responsiveOptions]="responsiveOptions">
         <ng-template let-bet pTemplate="bet">
           <div class="carousel-item">
             <app-bet [bet]="bet"></app-bet>
